--- a/Frontend/src/components/style/style.css
+++ b/Frontend/src/components/style/style.css
@@ -7,8 +7,8 @@
   z-index: 1;
 }
 .blob {
-  width: 380px;
-  height: 340px;
+  width: 142px;
+  height: 128px;
   border-radius: 100%;
 }
 .blob-one {
@@ -16,40 +16,179 @@
   top: -10px;
   left: -10px;
   background-color: #ff00b8;
-  filter: blur(14rem);
+  filter: blur(6rem);
 }
 .blob-two {
-  width: 460px;
-  height: 460px;
+  width: 170px;
+  height: 170px;
   position: absolute;
   bottom: -10px;
   right: -10px;
   background-color: #772bf2;
-  filter: blur(14rem);
+  filter: blur(6rem);
+}
+@media (min-width: 768px) {
+  .blob {
+    width: 260px;
+    height: 230px;
+  }
+  .blob-one {
+    filter: blur(10rem);
+  }
+  .blob-two {
+    width: 350px;
+    height: 350px;
+    filter: blur(10rem);
+  }
+}
+@media (min-width: 1024px) {
+  .blob {
+    width: 380px;
+    height: 340px;
+  }
+  .blob-one {
+    filter: blur(14rem);
+  }
+  .blob-two {
+    width: 460px;
+    height: 460px;
+    filter: blur(14rem);
+  }
 }
 
 /* Timer */
 .timer-container {
-  height: 184px;
+  height: 106px;
   margin: auto;
-  padding: 32px;
-  border-radius: 24px;
+  padding: 20px;
+  border-radius: 12px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 .timer-digits {
-  font-size: 64px;
+  font-size: 36px;
   font-weight: 500;
-  line-height: 64px;
+  line-height: 36px;
 }
 .digit-separater {
-  font-size: 64px;
+  font-size: 36px;
   font-weight: 400;
-  line-height: 64px;
+  line-height: 36px;
 }
 .time-english {
-  font-size: 24px;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 14px;
+}
+@media (min-width: 1024px) {
+  .timer-container {
+    height: 184px;
+    margin: auto;
+    padding: 32px;
+    border-radius: 24px;
+  }
+  .timer-digits {
+    font-size: 64px;
+    line-height: 64px;
+  }
+  .digit-separater {
+    font-size: 64px;
+    line-height: 64px;
+  }
+  .time-english {
+    font-size: 24px;
+    line-height: 24px;
+  }
+}
+
+/* Timer Input */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+.timer-input-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.popup-heading {
+  padding: 0px 12px;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 28.8px;
+}
+.close-btn {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  background-color: #ffffff;
+  color: #0f0f0f;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.input-timer {
+  width: 328px;
+  height: 38px;
+  padding: 12px 12px;
+  border: 1.5px solid;
+  border-radius: 4px;
+  background-color: transparent;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+  outline: none;
+}
+.set-timer-btn {
+  width: 328px;
+  height: 34px;
+  padding: 8px 0px;
+  border: none;
+  border-radius: 4px;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 18px;
+  background-color: #ffffff;
+  color: #0f0f0f;
+}
+
+@media (min-width: 1024px) {
+  .popup-heading {
+    font-size: 32px;
+    line-height: 32px;
+  }
+  .input-timer {
+    width: 600px;
+    height: 52px;
+    padding: 16px 20px;
+    border-radius: 8px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 20px;
+  }
+  .set-timer-btn {
+    width: 190px;
+    height: 48px;
+    padding: 8px 20px;
+    border-radius: 8px;
+    font-size: 32px;
+    line-height: 32px;
+  }
 }
