--- a/Frontend/src/pages/style/style.css
+++ b/Frontend/src/pages/style/style.css
@@ -214,7 +214,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #0f0f0f;
+  background-color: transparent;
   z-index: 2;
 }
 .inner-container {
