--- a/Frontend/src/components/style/style.css
+++ b/Frontend/src/components/style/style.css
@@ -104,6 +104,7 @@
 
 /* Timer Input */
 .popup {
+  position: relative;
   position: fixed;
   top: 0;
   left: 0;
@@ -117,18 +118,19 @@
   z-index: 100;
 }
 .timer-input-container {
-  width: 100%;
-  height: 100%;
+  margin: 2px;
+  padding: 24px 28px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: relative;
+  background-color: #0f0f0f7e;
+  border-radius: 12px;
 }
 .popup-heading {
-  padding: 0px 12px;
-  font-size: 24px;
-  font-weight: 600;
+  width: 328px;
+  font-size: 20px;
+  font-weight: 400;
   line-height: 28.8px;
 }
 .close-btn {
@@ -171,8 +173,10 @@
 
 @media (min-width: 1024px) {
   .popup-heading {
+    width: fit-content;
     font-size: 32px;
     line-height: 32px;
+    letter-spacing: 1.23px;
   }
   .input-timer {
     width: 600px;
