--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,20 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-.app-container{
-    width: 100vw;
-    height: 100vh;
-    background-color: #0f0f0f;
-    color: #ffffff;
-    position: relative;
-    transition: all ease-in 0.3s;
-    overflow: hidden;
+.app-container {
+  width: 100vw;
+  height: 100vh;
+  background-color: #0f0f0f;
+  color: #ffffff;
+  position: relative;
+  transition: all ease-in 0.3s;
+  overflow: hidden;
 }
 .app-container.light-theme {
-    background-color: #ffffff; 
-    color: #0f0f0f; 
-  }
+  background-color: #ffffff;
+  color: #0f0f0f;
+}
 
-  .poppins-regular {
-    font-family: "Poppins", sans-serif;
-    font-style: normal;
-  }
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+}
